apps/tino/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tino
spec:
  replicas: 0
  selector:
    matchLabels:
      app: tino
  template:
    metadata:
      labels:
        app: tino
    spec:
      containers:
        - name: tino
          image: ghcr.io/confirm/tino:1.20
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: tino-storage
              mountPath: /data
          resources:
            requests:
              memory: "126Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
      volumes:
        - name: tino-storage
          persistentVolumeClaim:
            claimName: tino-storage
