apps/tino/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tino
spec:
  type: ClusterIP
  selector:
    app: tino
  ports:
    - name: http
      port: 5000
      targetPort: http
