apps/tino/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tino-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tino-tls
  routes:
    - match: Host(`tino.matiix310.dev`)
      kind: Rule
      services:
        - name: tino
          port: 5000
